2010-01-16 14:55-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSWindow.m: Don't use the flags for key/main window tracking.
	These flags are getting out of sync due to different behavior on
	different backends.  Also, it's better to keep the state in one place
	instead of keeping them in sync.  I changed all of the instances of
	_f.is_key to [self isKeyWindow] and all of the instances of _f.is_main
	to [self isMainWindow] and those methods now check with NSApp to 
	determine if the current window is main.   I realize this is slower
	than the previous method of using flags, but it is also more resilient
	and reliable when the backend sends extra events.  This corrects the
	issue on Windows where we were losing the main window and had two 
	windows marked as "main".

2010-01-16 Quentin Mathe <quentin.mathe@gmail.com>

	Finished to implement the NSTable/OutlineView sort descriptor support.
	More changes are needed to get proper sorting support (e.g. visual 
	feedback).
	* Headers/NSTableView.h:
	Added _sortDescriptors ivar.
	(-tableView:sortDescriptorsDidChange:): Declared.
	* Source/NSTableView.m
	(-_clickTableColumn:, -_didChangeSortDescriptors:): Added. 
	(-_initDefaults, -dealloc): Modified to initialize/release 
	_sortDescriptors ivar.
	(-initWithCoder:, -encodeWithCoder:): Modified to support archiving 
	the sort descriptors.
	(-setSortSelectors:, -sortSelectors): Implemented.
	* Source/NSTableHeaderView.m (-mouseDown:): Modified to now call 
	-_clickTableColumn which prepares the sort descriptors among other 
	things. -_didClickTableColumn: will be called by -_clickTableColumn:.
	* Headers/NSOutlineView.h (-outlineView:sortDescriptorsDidChange:, 
	-outlineView:didClickTableColumn:): Declared.
	* Source/NSOutlineView.m (-_didClickTableColumn:, 
	-_didChangeSortDescriptors:): Added overriden NSTableView methods.

2010-01-15 German Arias <german@xelalug.org>

	* Source/NSImage.m: Changes to fix bug #28580.

>>>>>>> .r29294